--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.tuya",
-  "version": "1.0.8",
+  "version": "1.0.8a",
   "description": "Tuya",
   "author": {
     "name": "Ingo Fischer",
